test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_2.snaphost
HTTP/2.0 404 Not Found
Content-Length: 167
Content-Type: application/json
Date: Mon, 26 Jan 2026 03:06:39 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Envoy-Upstream-Service-Time: 26
X-Error-Code: GROUP_NOT_FOUND
X-Frame-Options: DENY
X-Java-Method: ApiAtlasV2DatabaseUsersResource::addUser
X-Java-Version: 17.0.17+10
X-Permitted-Cross-Domain-Policies: none

{"detail":"No group with ID 111111111111111111111111 exists.","error":404,"errorCode":"GROUP_NOT_FOUND","parameters":["111111111111111111111111"],"reason":"Not Found"}